[package]
name = "web-app"
version = "0.1.0"
authors = ["hatem.benbelgacem@outlook.com <hatem.benbelgacem@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }

[features]
default = ["server"]
web = ["dioxus/web"]
server = ["dioxus/fullstack"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1